Project Updates to the portfolio

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <!-- Hero Section -->
   <section id="hero">
     <img src="david_woka.jpeg" alt="David Woka" class="profile-picture">
-    <h1>Hi, I'm David Woka</h1>
+    <h1>Hello there, Call me David Woka</h1>
     <p>I'm a passionate Software Developer and aspiring Data Analyst.</p>
     <a href="David Woka - Updated Resume .pdf" download="David_Woka_CV.pdf" class="cta-button">Download My CV</a>
   </section>
