--- a/projects.html
+++ b/projects.html
@@ -21,22 +21,11 @@
   <section id="projects">
     <h2>My Projects</h2>
     <div class="project">
-      <h3>Data Analysis Dashboard</h3>
-      <p>A dashboard to visualize data trends using Python and libraries like Pandas and Matplotlib.</p>
-      <a href="https://github.com/davidwoka/data-analysis-dashboard" target="_blank">View on GitHub</a>
-    </div>
-    <div class="project">
-      <h3>Weather Forecast App</h3>
-      <p>A web app that shows real-time weather data using JavaScript and external APIs.</p>
+      <h3>Agriacess Portfolio App</h3>
+      <p>🌱🚜 Making agricultural inputs more accessible to everyone.🌱🚜 </p>
       <a href="https://github.com/davidwoka/weather-app" target="_blank">View on GitHub</a>
     </div>
-    <div class="project">
-      <h3>Machine Learning Model</h3>
-      <p>A machine learning model built to predict house prices using regression analysis in Python.</p>
-      <a href="https://github.com/davidwoka/ml-house-price-prediction" target="_blank">View on GitHub</a>
-    </div>
   </section>
-
   <!-- Footer -->
   <footer>
     <p>&copy; 2025 David Woka | All rights reserved</p>
